GRAS-770 fixing text wrapping on UserDetailView

--- a/app/views/userDetail/style.scss
+++ b/app/views/userDetail/style.scss
@@ -1,4 +1,10 @@
 #userDetail {
+
+  legend {
+    font-size: 20px;
+    font-weight: 600;
+  }
+
   #statusText {
     label {
       padding-left: 6px;
